Added member related files + implementing  .env file with dotenv
